modified code as necessary to incorperate upstream changes...
Signed-off-by: Eric Tsang <surplus.et@gmail.com>

--- a/build.gradle
+++ b/build.gradle
@@ -44,7 +44,7 @@ task jarBruteForceSolver(type: Jar, dependsOn: classes) {
     baseName = 'bruteForceSolver'
 }
 
-task jarByDistanceSolver(type: Jar, dependsOn: classes) {
+task jarOrderedSolver(type: Jar, dependsOn: classes) {
     from sourceSets.main.output
     from {configurations.runtime.collect {zipTree(it)}} {
         exclude "META-INF/*.SF"
@@ -52,9 +52,9 @@ task jarByDistanceSolver(type: Jar, dependsOn: classes) {
         exclude "META-INF/*.RSA"
     }
     manifest {
-        attributes 'Main-Class': 'com.github.ericytsang.research2016.announcementresolver.ByDistanceAnnouncementResolver'
+        attributes 'Main-Class': 'com.github.ericytsang.research2016.announcementresolver.OrderedAnnouncementResolver'
     }
-    baseName = 'byDistanceSolver'
+    baseName = 'orderedSolver'
 }
 
 task jarExhaustiveSolver(type: Jar, dependsOn: classes) {
