--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,7 @@ repositories {
 
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    compile "com.github.ericytsang:lib.oopatterns:1.0"
     compile "com.github.ericytsang:research2016.propositionallogic:jvm_2.1"
     compile "com.github.ericytsang:lib.javafxutils:master-SNAPSHOT"
     compile group: 'org.json', name: 'json', version: '20160212'
