abstracted the simulation framework stuff out into another project
Signed-off-by: Eric Tsang <surplus.et@gmail.com>

--- a/build.gradle
+++ b/build.gradle
@@ -25,50 +25,12 @@ repositories {
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     compile "com.github.ericytsang:lib.oopatterns:1.0"
+    compile "com.github.ericytsang:lib.simulator:1.0"
     compile "com.github.ericytsang:research2016.propositionallogic:jvm_2.1"
     compile "com.github.ericytsang:lib.javafxutils:master-SNAPSHOT"
     compile group: 'org.json', name: 'json', version: '20160212'
     testCompile 'junit:junit:4.11'
     testCompile "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
-}
-
-task jarBruteForceSolver(type: Jar, dependsOn: classes) {
-    from sourceSets.main.output
-    from {configurations.runtime.collect {zipTree(it)}} {
-        exclude "META-INF/*.SF"
-        exclude "META-INF/*.DSA"
-        exclude "META-INF/*.RSA"
-    }
-    manifest {
-        attributes 'Main-Class': 'com.github.ericytsang.research2016.announcementresolver.BruteForceAnnouncementResolver'
-    }
-    baseName = 'bruteForceSolver'
-}
-
-task jarOrderedSolver(type: Jar, dependsOn: classes) {
-    from sourceSets.main.output
-    from {configurations.runtime.collect {zipTree(it)}} {
-        exclude "META-INF/*.SF"
-        exclude "META-INF/*.DSA"
-        exclude "META-INF/*.RSA"
-    }
-    manifest {
-        attributes 'Main-Class': 'com.github.ericytsang.research2016.announcementresolver.OrderedAnnouncementResolver'
-    }
-    baseName = 'orderedSolver'
-}
-
-task jarExhaustiveSolver(type: Jar, dependsOn: classes) {
-    from sourceSets.main.output
-    from {configurations.runtime.collect {zipTree(it)}} {
-        exclude "META-INF/*.SF"
-        exclude "META-INF/*.DSA"
-        exclude "META-INF/*.RSA"
-    }
-    manifest {
-        attributes 'Main-Class': 'com.github.ericytsang.research2016.announcementresolver.ExhaustiveAnnouncementResolver'
-    }
-    baseName = 'exhaustiveSolver'
 }
 
 task jarGui(type: Jar, dependsOn: classes) {
@@ -82,11 +44,4 @@ task jarGui(type: Jar, dependsOn: classes) {
         attributes 'Main-Class': 'com.github.ericytsang.research2016.announcementresolver.GuiLauncher'
     }
     baseName = 'Announcement finder'
-}
-
-task jarAll {
-    dependsOn jarBruteForceSolver
-    dependsOn jarOrderedSolver
-    dependsOn jarExhaustiveSolver
-    dependsOn jarGui
 }
