--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 group 'com.github.ericytsang'
 
 buildscript {
-    ext.kotlin_version = '1.0.2-1'
+    ext.kotlin_version = '1.0.3'
     repositories {
         mavenCentral()
     }
@@ -24,10 +24,11 @@ repositories {
 
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    compile "com.github.ericytsang:lib.oopatterns:1.0"
-    compile "com.github.ericytsang:lib.simulator:1.0"
+    compile "com.github.ericytsang:lib.collections:jvm_2.0"
+    compile "com.github.ericytsang:lib.oopatterns:master-SNAPSHOT"
+    compile "com.github.ericytsang:lib.simulator:1.1"
     compile "com.github.ericytsang:research2016.propositionallogic:jvm_2.1"
-    compile "com.github.ericytsang:lib.javafxutils:master-SNAPSHOT"
+    compile "com.github.ericytsang:lib.javafxutils:1.0"
     compile group: 'org.json', name: 'json', version: '20160212'
     testCompile 'junit:junit:4.11'
     testCompile "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
