fixed a bug in the build file that tried to run a renamed main function

--- a/build.gradle
+++ b/build.gradle
@@ -42,7 +42,7 @@ task jarGui(type: Jar, dependsOn: classes) {
         exclude "META-INF/*.RSA"
     }
     manifest {
-        attributes 'Main-Class': 'com.github.ericytsang.research2016.announcementresolver.GuiLauncher'
+        attributes 'Main-Class': 'com.github.ericytsang.research2016.announcementresolver.Main'
     }
     baseName = 'Announcement finder'
 }
