--- a/build.gradle
+++ b/build.gradle
@@ -23,15 +23,15 @@ repositories {
 }
 
 dependencies {
-    compile "com.github.ericytsang:lib.fsm:master-SNAPSHOT"
-    compile "com.github.ericytsang:lib.json:master-SNAPSHOT"
-    compile "com.github.ericytsang:lib.astar:master-SNAPSHOT"
-    compile "com.github.ericytsang:lib.observe:master-SNAPSHOT"
-    compile "com.github.ericytsang:lib.simulator:master-SNAPSHOT"
-    compile "com.github.ericytsang:lib.concurrent:master-SNAPSHOT"
-    compile "com.github.ericytsang:lib.javafxutils:master-SNAPSHOT"
-    compile "com.github.ericytsang:lib.constrainedlist:master-SNAPSHOT"
-    compile "com.github.ericytsang:research2016.propositionallogic:master-SNAPSHOT"
+    compile "com.github.ericytsang:lib.fsm:1.0"
+    compile "com.github.ericytsang:lib.json:1.0"
+    compile "com.github.ericytsang:lib.astar:1.0"
+    compile "com.github.ericytsang:lib.observe:1.0"
+    compile "com.github.ericytsang:lib.simulator:1.2"
+    compile "com.github.ericytsang:lib.concurrent:1.0"
+    compile "com.github.ericytsang:lib.javafxutils:1.1"
+    compile "com.github.ericytsang:lib.constrainedlist:1.0"
+    compile "com.github.ericytsang:research2016.propositionallogic:jvm_3.0"
     compile "org.json:json:20160212"
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     testCompile 'junit:junit:4.11'
