--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 group 'com.github.ericytsang'
 
 buildscript {
-    ext.kotlin_version = '1.0.2-1'
+    ext.kotlin_version = '1.0.3'
     repositories {
         mavenCentral()
     }
